// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not render ExpensesSummary when there are no expenses 1`] = `<div />`;

exports[`Should render ExpensesSummary correctly 1`] = `
<div>
  <h2>
    Viewing 
    3
     
    expenses
     totalling 
    €1 141,95
     
  </h2>
</div>
`;

exports[`Should render ExpensesSummary correctly with a single expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    €1,95
     
  </h2>
</div>
`;
